fix center align for mobile

--- a/src/styles/about.module.css
+++ b/src/styles/about.module.css
@@ -15,6 +15,8 @@
     margin: auto;
     margin-top: 1rem;
     margin-bottom: 4px;
+    align-items: center;
+    display: grid;
 }
 
 @media screen and (max-width: 600px) {
